# meson-plugin-rpath

app/: app.c  helper.c  helper.h  meson.build
plugin/: impl.c  impl.h  meson.build  plugin.c  plugin.h  test.c
